k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: framework-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: api.framework.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: framework-service
                port:
                  number: 80
